--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 server.servlet.context-path=/
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_qltc1
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_qltc
 spring.datasource.username=root
 spring.datasource.password=
 
